--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
     ]
   },
   "angularCompilerOptions": {
+    "skipLibCheck": true,
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
