--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@ffmpeg/core": "^0.8.3",
+    "@ffmpeg/ffmpeg": "^0.9.4",
+    "@types/node": "^20.4.8",
     "@types/uuid": "^9.0.2",
     "angular": "^1.8.3",
     "firebase": "^9.23.0",
