--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "@ffmpeg/ffmpeg": "^0.9.4",
     "@types/node": "^20.4.8",
     "@types/uuid": "^9.0.2",
+    "@types/video.js": "^7.3.52",
+    "@videojs/themes": "^1.0.1",
     "angular": "^1.8.3",
     "firebase": "^9.23.0",
     "ngx-mask": "^16.2.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "uuid": "^9.0.0",
+    "video.js": "^8.3.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
